--- a/src/pages/main.html
+++ b/src/pages/main.html
@@ -3,8 +3,70 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>TODO List</title>
+    <title>Collaborative TODO List</title>
     <style>
+      .auth-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 20px;
+        margin-bottom: 20px;
+      }
+      .auth-btn {
+        padding: 10px 20px;
+        background: #6c63ff;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background 0.2s;
+      }
+      .auth-btn:hover {
+        background: #5a52e6;
+      }
+      .user-info {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        padding: 10px;
+        background: #f0f0f0;
+        border-radius: 5px;
+      }
+      .sign-out-btn {
+        padding: 5px 10px;
+        background: #ff4444;
+        color: white;
+        border: none;
+        border-radius: 3px;
+        cursor: pointer;
+      }
+      .collaborative-lists {
+        margin: 20px 0;
+      }
+      .list-item {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 10px;
+        background: #f8f9fa;
+        margin: 5px 0;
+        border-radius: 5px;
+      }
+      .create-list-btn {
+        padding: 10px 20px;
+        background: #28a745;
+        color: white;
+        border: none;
+        border-radius: 5px;
+        cursor: pointer;
+      }
+      .create-list-btn:hover {
+        background: #218838;
+      }
+      .list-name {
+        font-weight: bold;
+      }
+    </style>
       body {
         margin: 0;
         background: #f8f8ff;
@@ -150,59 +212,163 @@
   </head>
   <body>
     <div class="frame">
-      <div class="div">
-        <div class="overlap-group">
-          <div class="text-wrapper">TO DO LIST</div>
-          <div class="images-container">
-            <img class="image" src="file:///C:/Users/tejas/OneDrive/Desktop/SANIKA/workhardbitch/todolist/assets/images/kitty.png" alt="Kitty" />
-            <img class="img" src="file:///C:/Users/tejas/OneDrive/Desktop/SANIKA/workhardbitch/todolist/assets/images/flower.png" alt="Flower" />
-          </div>
-        </div>
-
         <div class="overlap">
-          <img class="image-2" src="file:///C:/Users/tejas/OneDrive/Desktop/SANIKA/workhardbitch/todolist/assets/images/next.png" alt="Next" id="next-btn" />
-          <p class="p">PRESS BUTTON TO GET STARTED.</p>
+          <img src="../assets/images/image-4@2x.png" class="image-2" alt="" />
+          <p class="p">Click to add a task</p>
         </div>
-
-        <div id="task-box">
-          <input type="text" id="task-input" placeholder="Write your task..." />
-          <button id="add-btn">+</button>
-        </div>
-
-        <div id="tasks-list"></div>
       </div>
+      <div id="task-box" class="task-box">
+        <input
+          type="text"
+          id="task-input"
+          placeholder="Enter your task..."
+          class="task-input"
+        />
+        <button id="add-btn" class="add-btn">Add Task</button>
+      </div>
+      <div id="task-list" class="task-list"></div>
     </div>
+  </div>
 
-    <script>
-      const nextBtn = document.getElementById('next-btn');
-      const taskBox = document.getElementById('task-box');
-      const addBtn = document.getElementById('add-btn');
-      const taskInput = document.getElementById('task-input');
-      const tasksList = document.getElementById('tasks-list');
+  <script src="../firebase.js"></script>
+  <script>
+    let currentListRef = null;
+    let currentUser = null;
 
-      nextBtn.onclick = () => {
-        taskBox.style.display = 'flex';
-        taskInput.focus();
-      };
+    // Authentication
+    const signInBtn = document.getElementById('signInBtn');
+    const signOutBtn = document.getElementById('signOutBtn');
+    const userInfo = document.getElementById('userInfo');
+    const authButtons = document.getElementById('auth-buttons');
+    const createListBtn = document.getElementById('createListBtn');
+    const listsContainer = document.getElementById('listsContainer');
+    const currentListContainer = document.getElementById('currentListContainer');
+    const currentListName = document.getElementById('currentListName');
+    const taskInput = document.getElementById('task-input');
+    const addBtn = document.getElementById('add-btn');
+    const taskBox = document.getElementById('task-box');
+    const taskList = document.getElementById('task-list');
+    const image2 = document.querySelector('.image-2');
 
-      addBtn.onclick = () => {
-        const value = taskInput.value.trim();
-        if (value) {
-          const div = document.createElement('div');
-          div.className = 'task-item';
-          div.innerHTML = `
-            <span>${value}</span>
-            <button class="delete-btn" onclick="this.parentElement.remove()">×</button>
-          `;
-          tasksList.appendChild(div);
-          taskInput.value = '';
-          taskInput.focus();
+    // Initialize Firebase auth
+    auth.onAuthStateChanged((user) => {
+      if (user) {
+        currentUser = user;
+        authButtons.style.display = 'none';
+        userInfo.style.display = 'flex';
+        document.getElementById('user-email').textContent = user.email;
+        loadUserLists();
+      } else {
+        currentUser = null;
+        authButtons.style.display = 'block';
+        userInfo.style.display = 'none';
+        currentListContainer.style.display = 'none';
+        listsContainer.innerHTML = '';
+      }
+    });
+
+    signInBtn.addEventListener('click', () => {
+      signInWithPopup(auth, provider)
+        .then((result) => {
+          console.log('Signed in:', result.user);
+        })
+        .catch((error) => {
+          console.error('Sign in error:', error);
+        });
+    });
+
+    signOutBtn.addEventListener('click', () => {
+      signOut(auth)
+        .then(() => {
+          console.log('Signed out');
+        })
+        .catch((error) => {
+          console.error('Sign out error:', error);
+        });
+    });
+
+    createListBtn.addEventListener('click', () => {
+      if (currentUser) {
+        const newListRef = push(ref(database, 'lists'));
+        const newListName = prompt('Enter list name:');
+        if (newListName) {
+          set(newListRef, {
+            name: newListName,
+            owner: currentUser.uid,
+            createdAt: new Date().toISOString(),
+            tasks: {}
+          });
         }
-      };
+      }
+    });
 
-      taskInput.addEventListener('keydown', function (e) {
-        if (e.key === 'Enter') addBtn.click();
+    function loadUserLists() {
+      if (!currentUser) return;
+
+      const userListsRef = ref(database, `lists`);
+      onValue(userListsRef, (snapshot) => {
+        const lists = snapshot.val() || {};
+        const userLists = Object.entries(lists)
+          .filter(([_, list]) => list.owner === currentUser.uid)
+          .map(([key, list]) => ({ id: key, ...list }));
+
+        listsContainer.innerHTML = userLists.map(list => `
+          <div class="list-item" onclick="selectList('${list.id}')">
+            <span class="list-name">${list.name}</span>
+            <span>(${Object.keys(list.tasks || {}).length} tasks)</span>
+          </div>
+        `).join('');
       });
-    </script>
-  </body>
+    }
+
+    function selectList(listId) {
+      currentListRef = ref(database, `lists/${listId}`);
+      currentListContainer.style.display = 'block';
+      
+      onValue(currentListRef, (snapshot) => {
+        const list = snapshot.val();
+        if (list) {
+          currentListName.textContent = list.name;
+          updateTaskList(list.tasks || {});
+        }
+      });
+    }
+
+    function updateTaskList(tasks) {
+      taskList.innerHTML = Object.entries(tasks)
+        .map(([taskId, task]) => `
+          <div class="task-item" data-task-id="${taskId}">
+            <span class="task-text">${task.text}</span>
+            <button class="delete-btn" onclick="deleteTask('${taskId}')">Delete</button>
+          </div>
+        `).join('');
+    }
+
+    addBtn.addEventListener('click', () => {
+      if (currentListRef && taskInput.value.trim()) {
+        const newTaskRef = push(ref(database, `lists/${currentListRef.key}/tasks`));
+        set(newTaskRef, {
+          text: taskInput.value.trim(),
+          createdAt: new Date().toISOString()
+        });
+        taskInput.value = '';
+        taskBox.style.display = 'none';
+      }
+    });
+
+    function deleteTask(taskId) {
+      if (currentListRef) {
+        remove(ref(database, `lists/${currentListRef.key}/tasks/${taskId}`));
+      }
+    }
+
+    image2.addEventListener('click', function() {
+      taskBox.style.display = taskBox.style.display === 'none' ? 'flex' : 'none';
+    });
+
+    taskInput.addEventListener('keydown', function(e) {
+      if (e.key === 'Enter') addBtn.click();
+    });
+  </script>
+</body>
 </html>
